# beast-affiliates-website

./: .gitignore  README.md  logo.avif
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/app/: amazon_url.py  articlegen.py  config.py  database.py  demo.py  favicon_asset.py  models.py  paapi.py  portal.py  scraper.py  service.py  site.py  web.py
frontend/: index.html  vercel.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/views/: AuthView.tsx  EarningsView.tsx  LinksView.tsx  OverviewView.tsx  ProfileView.tsx  PublicDemo.tsx  WhatsAppView.tsx
