[project]
name = "beast-affiliates-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.0",
    "httpx==0.28.1",
    "psycopg2-binary==2.9.12",
    "python-dotenv==1.2.2",
    "sqlalchemy==2.0.44",
    "uvicorn==0.51.0",
]

[dependency-groups]
dev = [
    "pillow>=12.3.0",
]
